--- a/index.html
+++ b/index.html
@@ -17,21 +17,16 @@
 		    
 		
 		
-			<!-- <input class="info" placeholder="name..." ng-model="name"/><hr />
-			<input class="info" placeholder="age..."  ng-model="age"/><hr />
-			<input class="info" placeholder="breed..."  ng-model="breed"/><hr />
-			<input class="info" placeholder="location..."  ng-model="location"/><hr />
-			<input class="info" type="file" name="pic" accept="image/*" ng-model="file"><hr />
-			<button ng-click="send()">send</button><hr /> -->
+			
 		<!-- </div> -->
-		<ng-view></ng-view>
+		<div ng-view><div>
 		
 		<script src="node_modules/jquery/dist/jquery.js"></script>
-		<script src="js/angular (1).js"></script>
+		<script src="js/angular.js"></script>
 		<script src="js/angular-route.min.js"></script>
 		<script src="app/config.js"></script>
 		<script src="script2.js"></script>
-		<!-- <script src="app/controllers/form.js"></script> -->
+		<script src="app/controllers/form.js"></script>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 		
