--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<!-- <div id="animalId" ng-controller="animalId"> -->
-				<nav>
-					<ul>
-						  <li><a href="#home">Home</a></li>
- 						  <li><a href="#contact">Contact</a></li>
-  						  <li><a href="#about">About</a></li>
-					</ul>
-				</nav>
-			<div class="clearBox"></div>
-		    
-		
-		
-			
-		<!-- </div> -->
-		<div ng-view><div>
-		
-		<script src="node_modules/jquery/dist/jquery.js"></script>
-		<script src="js/angular.js"></script>
-		<script src="js/angular-route.min.js"></script>
-		<script src="app/config.js"></script>
-		<script src="script2.js"></script>
-		<script src="app/controllers/form.js"></script>
-		<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-		<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-		
+		<div ng-controller="animalId">
+		<nav>
+			<ul >
+				<li>
+					<a href="#home">Home</a>
+				</li>
+				<li>
+					<a href="#contact">Contact</a>
+				</li>
+				<li>
+					<a href="#about">About</a>
+				</li>
+			</ul>
+		</nav>
+		<div class="clearBox"></div>
+
+		</div>
+		<div ng-view>
+			<div>
+
+				<script src="node_modules/jquery/dist/jquery.js"></script>
+				<script src="js/angular.js"></script>
+				<script src="js/angular-route.min.js"></script>
+				<script src="app/config.js"></script>
+				<script src="script2.js"></script>
+				<script src="app/controllers/form.js"></script>
+				<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+				<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
 	</body>
 </html>
